--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,36 +1,12 @@
 <%-
-  mem = case job_type
-          when "small"
-            "20"
-          when "medium"
-            "64"
-          when "large"
-            "256"
-          else
-            "4"
-          end
-  ppn = case job_type
-          when "quick"
-            "2"
-          when "small"
-            "4"
-          else
-            "8"
-          end
-  queue = case job_type
-          when "medium"
-            "medmem"
-          when "large"
-            "bigmem"
-          end
+  ncpus = num_cores.blank? ? 2 : num_cores.to_i
+  mem = ncpus * 4
 -%>
 ---
 batch_connect:
   template: "basic"
 script:
-  email: <%= ENV["USER"] %>@mcw.edu
-  queue_name: "<%= queue %>"
+  job_name: "rstudio_ood_test"
   native:
-    resources:
-      nodes: "1:ppn=<%= ppn %>"
-      mem: "<%= mem %>gb"
+    - "-l"
+    - "select=1:ncpus=<%= ncpus %>:mem=<%= mem %>gb"
