Minor cleanups to OOD files

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -4,10 +4,10 @@
 -%>
 ---
 batch_connect:
-  template: "basic"
+  template: basic
 script:
-  job_name: "rstudio_ood_test"
+  job_name: "rstudio-kod"
   native:
     - "-l"
     - "select=1:ncpus=<%= ncpus %>:mem=<%= mem %>gb"
-  email: "<%= ENV['USER'] %>@unsw.edu.au" 
+  email: "<%= ENV['USER'] %>@unsw.edu.au"
