--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -1,4 +1,5 @@
-#!/usr/bin/env bash
+#!/bin/bash
+
 module purge
 
 # load RStudio Server
@@ -19,7 +20,7 @@ export RSESSION_WRAPPER_FILE="${PWD}/rsession.sh"
 (
 umask 077
 sed 's/^ \{2\}//' > "${RSESSION_WRAPPER_FILE}" << EOL
-  #!/usr/bin/env bash
+  #!/bin/bash
 
   # Log all output from this script
   export RSESSION_LOG_FILE="${PWD}/rsession.log"
